adds lms wiki functionality.
!wiki search terms

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "request": "*",
     "cheerio": "*",
     "fs": "*",
-    "tosource": "*"
+    "tosource": "*",
+    "jquery": "*"
   },
   "author": "baiter",
   "license": "ISC",
